test_regress/t/t_property_unsup.out
%Error-UNSUPPORTED: t/t_property_unsup.v:62:41: Unsupported: eventually[] (in property expression)
   62 |   assert property (counter == 1 implies eventually[1: 2] counter == 3);
      |                                         ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_unsup.v:77:20: Unsupported: eventually[] (in property expression)
   77 |   assert property (eventually[0: 2] counter == 3);
      |                    ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:87:21: Unsupported: always (in property expression)
   87 |   assert property ((always a) implies (always a));
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:87:40: Unsupported: always (in property expression)
   87 |   assert property ((always a) implies (always a));
      |                                        ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:89:26: Unsupported: always (in property expression)
   89 |   assert property ((a or(always b)) implies (a or(always b)));
      |                          ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:89:23: Unsupported: or (in sequence expression)
   89 |   assert property ((a or(always b)) implies (a or(always b)));
      |                       ^~
%Error-UNSUPPORTED: t/t_property_unsup.v:89:51: Unsupported: always (in property expression)
   89 |   assert property ((a or(always b)) implies (a or(always b)));
      |                                                   ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:89:48: Unsupported: or (in sequence expression)
   89 |   assert property ((a or(always b)) implies (a or(always b)));
      |                                                ^~
%Error-UNSUPPORTED: t/t_property_unsup.v:91:21: Unsupported: eventually[] (in property expression)
   91 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:91:50: Unsupported: eventually[] (in property expression)
   91 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                                                  ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:93:21: Unsupported: s_eventually (in property expression)
   93 |   assert property ((s_eventually a) implies (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:93:46: Unsupported: s_eventually (in property expression)
   93 |   assert property ((s_eventually a) implies (s_eventually a));
      |                                              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:95:23: Unsupported: until (in property expression)
   95 |   assert property ((a until b) implies (a until b));
      |                       ^~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:95:43: Unsupported: until (in property expression)
   95 |   assert property ((a until b) implies (a until b));
      |                                           ^~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:97:23: Unsupported: s_until (in property expression)
   97 |   assert property ((a s_until b) implies (a s_until b));
      |                       ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:97:45: Unsupported: s_until (in property expression)
   97 |   assert property ((a s_until b) implies (a s_until b));
      |                                             ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:99:23: Unsupported: until_with (in property expression)
   99 |   assert property ((a until_with b) implies (a until_with b));
      |                       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:99:48: Unsupported: until_with (in property expression)
   99 |   assert property ((a until_with b) implies (a until_with b));
      |                                                ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:101:23: Unsupported: s_until_with (in property expression)
  101 |   assert property ((a s_until_with b) implies (a s_until_with b));
      |                       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:101:50: Unsupported: s_until_with (in property expression)
  101 |   assert property ((a s_until_with b) implies (a s_until_with b));
      |                                                  ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:105:23: Unsupported: #-# (in property expression)
  105 |   assert property ((a #-# b) implies (a #-# b));
      |                       ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:105:41: Unsupported: #-# (in property expression)
  105 |   assert property ((a #-# b) implies (a #-# b));
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:115:21: Unsupported: always (in property expression)
  115 |   assert property ((always a) iff (always a));
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:115:36: Unsupported: always (in property expression)
  115 |   assert property ((always a) iff (always a));
      |                                    ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:117:21: Unsupported: eventually[] (in property expression)
  117 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:117:46: Unsupported: eventually[] (in property expression)
  117 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                                              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:119:21: Unsupported: s_eventually (in property expression)
  119 |   assert property ((s_eventually a) iff (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:119:42: Unsupported: s_eventually (in property expression)
  119 |   assert property ((s_eventually a) iff (s_eventually a));
      |                                          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:121:23: Unsupported: until (in property expression)
  121 |   assert property ((a until b) iff (a until b));
      |                       ^~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:121:39: Unsupported: until (in property expression)
  121 |   assert property ((a until b) iff (a until b));
      |                                       ^~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:123:23: Unsupported: s_until (in property expression)
  123 |   assert property ((a s_until b) iff (a s_until b));
      |                       ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:123:41: Unsupported: s_until (in property expression)
  123 |   assert property ((a s_until b) iff (a s_until b));
      |                                         ^~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:125:23: Unsupported: until_with (in property expression)
  125 |   assert property ((a until_with b) iff (a until_with b));
      |                       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:125:44: Unsupported: until_with (in property expression)
  125 |   assert property ((a until_with b) iff (a until_with b));
      |                                            ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:127:23: Unsupported: s_until_with (in property expression)
  127 |   assert property ((a s_until_with b) iff (a s_until_with b));
      |                       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:127:46: Unsupported: s_until_with (in property expression)
  127 |   assert property ((a s_until_with b) iff (a s_until_with b));
      |                                              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:131:23: Unsupported: #-# (in property expression)
  131 |   assert property ((a #-# b) iff (a #-# b));
      |                       ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:131:37: Unsupported: #-# (in property expression)
  131 |   assert property ((a #-# b) iff (a #-# b));
      |                                     ^~~
%Error: Exiting due to
